--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Why Jazz?
-description: Why do we need another framework? (In 800 words.)
-image: assets/images/pic01.jpg
+description: In 500 words, for a non-technical audience, why do we need Jazz?
+image: assets/images/top_jazz.jpg
 ---
 <blockquote>
 <dl>
