Major rewrite of why Jazz

--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -1,78 +1,57 @@
 ---
 layout: post
 title: Why Jazz?
-description: In 500 words, for a non-technical audience, why do we need Jazz?
+description: In less than 300 words, for a non-technical audience, why do we need Jazz?
 image: assets/images/top_jazz.jpg
 ---
+<div id="main" class="alt">
+<section id="one">
+
+<div class="inner">
+<h3>Efficiency is never wrong</h3>
+<div class="row">
+<div class="6u 12u$(small)">
 <blockquote>
-<dl>
-	<dd>
-		<p>“A lot of people think that performance is about doing the same thing, just doing it faster. And that's not true! If you can do
-		something really fast, really well, people start using it differently."</p>
-	</dd>
-	<dt>Linus Torvalds, one of the few actual creators of game-changing tools, including Linux and git.</dt>
-</dl></blockquote>
+“A lot of people think that performance is about doing the same thing, just doing it faster. And that's not true! If you can do
+something really fast, really well, people start using it differently."
+</blockquote>
+</div>
+<div class="6u$ 12u$(small)">
+<br/><br/><br/>
+<b>Linus Torvalds</b>, one of the few creators of game-changing tools, including Linux and git.
+</div>
+</div>
+</div>
 
+<div class="inner">
 
-<h3>Does AI live in the perfect world many people just presume?</h3>
+<h4>The problem we solve</h4>
+<p>This page is the short version on how we envision <b>Jazz</b> as a necessary platform to advance both <b>AI research</b> and deployment
+of <b>AI in production</b>. A longer, but still understandable without a technical background, explanation on why it is needed, can be found in
+<a href="/kaalam/2018/10/02/reviewing_the_motive.html"><b>the motive</b></a>. How <b>Jazz</b> solves the identified opportunities for
+improvement over current platforms is discussed in <a href="/kaalam/2018/10/01/how_is_jazz_a_solution.html"><b>how is Jazz a solution</b></a>?</p>
 
-AI is living the most exciting moment in decades. All the necessary tools to explore, train and deploy deep learning models are free software.
-They combine highly optimized low level CPU and GPU software with highly expressive and productive scripting languages on top
-of it that allows AI researchers to implement new ideas and publish new results every day at an unprecedented pace.
+<h4>Past and present</h4>
+<p><b>Jazz</b> has been under development since end of 2016 although a narrow version of the current design. It was released as OSS by BBVA
+in December 2017 and started its development towards new goals in the first quarter of 2018. You can also check the
+<a href="/jazz_reference/basics_jazz_vision.html"><b>technical vision</b></a>, the
+<a href="/jazz_reference/basics_jazz_today.html"><b>state of current development</b></a>
+and the <a href="/develop_jazz02/index.html"><b>programmer's documentation</b></a> all of them updated continuously.</p>
 
-So we may think current frameworks like Tensorflow, Keras, MxNet, ... are all we need to create the advances AI needs, including such things as:
+<h4>How we plan to make it happen</h4>
+<p><b>Jazz</b> is built as open source software by a group collectively know as <b>kaalam.ai</b>. The group has already being delivering Jazz
+versions and documentation using automated integration during 2018. The first declaration of intentions is
+this <a href="/kaalam/2018/10/03/what_is_kaalam_ai.html"><b>hello world</b></a>!</p>
 
+<h4>And finally, the pitch!</h4>
 <ul>
-	<li>Applying reinforcement learning outside highly abstract fields like board games.</li>
-	<li>Learning with something other than Gradient Descent.</li>
-	<li>Learning with something other than fully connected layers.</li>
-	<li>Exploring ideas with the right amount of data naturally. Even with a billion rows, many conclusions can still be drawn from hundred
-	cases or less.</li>
-	<li>Creating semantic representations that are not "rectangular".</li>
-	<li>Finding safe and automated ways to work with all kinds of data sources.</li>
-	<li>Supporting scaling and the creation of APIs in a natural automatic and intuitive way.</li>
+	<li>We are building Jazz because <b>we need Jazz</b>.</li>
+	<li>We need Jazz because <b>there is nothing like Jazz</b> than we can use to build what we <b>need to build</b>.</li>
+	<li>How long should a pitch be? One minute? Well, we don't need that much.</li>
 </ul>
+</div>
 
-In normal software development, when we have something like the current frameworks where 99% of the execution is done with highly
-efficient and optimized code and 1% with highly productive scripting languages that allow expressing complex ideas, we are living in the
-perfect world. Does this apply to AI? Are we living in the perfect world?
+</section>
+</div>
 
-<h4>maybe not, considering ...</h4>
-<ul>
-	<li>This way of thinking assumes we already know what to run in that 99% of the time. Actually, we don't. And our current frameworks are
-	a major hindrance in the exploration of new ideas.</li>
-	<li>Furthermore, they treat problems like a hammer. Everything is a nail, begging for fully connected layers and huge matrix multiplications.
-	In many cases, the active connections in a fully connected layer are less than 0.1%. So there is space for optimizing orders of magnitude
-	after all.</li>
-	<li>It is true that we have amazing free software tools to process all kinds of data. But, since we have not advanced much in persistent
-	data abstractions since 1950 (yeah, <b>the file</b> was invented in 1950), it is hard for a machine to reason about how to apply these
-	tools seamlessly. Creation of data pipelines is tedious and error prone.</li>
-	<li>Scripting languages are great for exploring ideas. But, when we want to convert our pipeline into a product, we probably want to get
-	rid of them. If we could use Python to express ideas that are executed in thread-safe machine code, once that code is created, we don't
-	need Python anymore.</li>
-	<li>We live in a multi-channel connected world, anyone knows. And current frameworks already have REST APIs. But, when the back-end is a
-	hive of data services, interpreters, virtual machines, etc. we are nowhere near a 99% highly optimized code. Now, the lightweight, single
-	process, unlimited threads back-end that simply doesn't need all these things wins by orders of magnitude.</li>
-</ul>
-
-**Summarizing**: When we accept **we don't yet know how to do the things in our first list**, trying to implement them in scripting languages is
-definitely a bad idea. Throwing hardware at the problem only makes it less obvious. In the end you may get far enough to publish a result. Maybe,
-that's all you needed to get your PhD. "Huge hardware requirements" is just another name for **irreproducible** and ideas will only be adopted
-when they are implemented efficiently.
-
-Implementing from scratch (using libraries, of course) in C++ (or, say, rust or go), produces some notable products, but only a fraction of
-researchers know C++. Only a fraction of them understands the CPU well enough to write efficient and safe code. Most have deadlines.
-They finish their PhD, leave some thousands of undocumented lines of code with technical debt behind and move on.
-
-This said, **we don't want to sound like we own the truth**, we are just starting, we need as much help as we can get. We happen to have created
-a product **we believe** can lead the next generation of AI applications a quantum leap forward. And we offer it to **the community** the only
-way we know: by making it **open source software**. Everything ready to try, with simple one liners you can: run a **Jazz server** from **docker**
-**hub**, install the **Python** package **pyjazz** using **pip** or the **R** client **rjazz** from **cran**.
-
-Before we even raised the first euro, we have enough of the product to have <b>you</b> decide by yourself if you want to use it or be part
-of it. Just use the simplest method: <b>give Jazz a try</b> and decide for yourself.
-
-An remember, open source software is **not** about the product, it is **about the community**. We need **you** to make it happen.
-
-
-Keep reading, if that makes sense.
+*[OSS]: Open Source Software
