Edits the third sentence in the pitch

--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -47,7 +47,8 @@ this <a href="/kaalam/2018/10/03/what_is_kaalam_ai.html"><b>hello world</b></a>!
 <ul>
 	<li>We are building Jazz because <b>we need Jazz</b>.</li>
 	<li>We need Jazz because <b>there is nothing like Jazz</b> than we can use to build what we <b>need to build</b>.</li>
-	<li>How long should a pitch be? One minute? Well, we don't need that much.</li>
+	<li>We are <b>not raising money</b> at this stage because we do not want a short term business plan steering the long term vision:
+<b>building a platform that enables radically new ideas in AI</b>.</li>
 </ul>
 </div>
 
