--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -41,14 +41,14 @@ and the <a href="/develop_jazz02/index.html"><b>programmer's documentation</b></
 <h4>How we plan to make it happen</h4>
 <p><b>Jazz</b> is built as open source software by a group collectively know as <b>kaalam.ai</b>. The group has already being delivering Jazz
 versions and documentation using automated integration during 2018. The first declaration of intentions is
-this <a href="/kaalam/2018/10/03/what_is_kaalam_ai.html"><b>hello world</b></a>!</p>
+this <a href="/kaalam/2018/10/03/what_is_kaalam_ai.html"><b>hello kaalam.ai</b></a>!</p>
 
 <h4>And finally, the pitch!</h4>
 <ul>
 	<li>We are building Jazz because <b>we need Jazz</b>.</li>
-	<li>We need Jazz because <b>there is nothing like Jazz</b> than we can use to build what we <b>need to build</b>.</li>
-	<li>We are <b>not looking for investors</b> at this stage because we do not want a short term business plan steering the long term vision:
-<b>building a platform that enables radically new ideas in AI</b>.</li>
+	<li>We need Jazz because <b>there is nothing like Jazz</b> than we can use to build what we <b>want to build</b>.</li>
+	<li>We are <b>not looking for investors</b> at this stage, because we do not want a business plan steering the vision: <b>building a
+platform that enables radically new ideas in AI</b>.</li>
 </ul>
 </div>
 
