--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -47,7 +47,7 @@ this <a href="/kaalam/2018/10/03/what_is_kaalam_ai.html"><b>hello kaalam.ai</b><
 <ul>
 	<li>We are building Jazz because <b>we need Jazz</b>.</li>
 	<li>We need Jazz because <b>there is nothing like Jazz</b> than we can use to build what we <b>want to build</b>.</li>
-	<li>We are <b>not looking for investors</b> at this stage, because we do not want a business plan steering the vision: <b>building a
+	<li>We are <b>not looking for investors</b> at this stage, because we do not want a business plan ruling the vision: <b>building a
 platform that enables radically new ideas in AI</b>.</li>
 </ul>
 </div>
