--- a/kaalam/_posts/2018-10-4-why_jazz.md
+++ b/kaalam/_posts/2018-10-4-why_jazz.md
@@ -34,8 +34,8 @@ improvement over current platforms is discussed in <a href="/kaalam/2018/10/01/h
 
 <h4>The problem we solve</h4>
 
-<p>Jazz is not just a step forward in performance; it aims at storing, processing and presenting data in such an efficient manner that it fundamentally
-transforms the way we use AI.</p>
+<p>Jazz is not just a step forward in performance; it aims at storing, processing and communicating data in such an efficient manner that
+it fundamentally transforms the way we use AI, by generating automated code to solve problems.</p>
 
 <h4>Past and present</h4>
 <p><b>Jazz</b> has been under development since end of 2016 although a narrow version of the current design. It was released as OSS by BBVA
